--- a/views/index.html
+++ b/views/index.html
@@ -11,31 +11,39 @@
 </head>
 
 <body class="h-100">
+    <div class="jumbotron py-2 orange">
+        <img id="logo" class="rounded-circle mx-auto d-block"
+            src="https://images.unsplash.com/photo-1547584370-2cc98b8b8dc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
+            alt="Burger Image">
+    </div>
+
     <div class="container h-100">
-        <img id="logo" class="rounded-circle mx-auto d-block" src="https://images.unsplash.com/photo-1547584370-2cc98b8b8dc8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80" alt="Burger Image">
         <div class="card p-0 overflow-hidden">
             <div class="card-title text-center text-light orange">
                 <h1>Eat-Da-Burger</h1>
             </div>
 
             <div class="row">
-                <div class="data-well col-6" id="burgerWell">
-
+                <div class="data-well col-6 h-100">
+                    <div id="burgerWell"></div>
                 </div>
-                <div class="data-well col-6" id="devouredWell">
-
+                <div class="data-well col-6 h-100">
+                    <div id="devouredWell"></div>
                 </div>
             </div>
-            <div class="card-footer orange text-center text-light">
+
+            <div class="card-footer orange text-center text-light mt-2">
                 <h3>Add a Burger!</h3>
             </div>
             <div class="card-footer row justify-content-center">
                 <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
                     <form>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" placeholder="name your burger" aria-label="" aria-describedby="basic-addon1">
+                            <input type="text" id="burger-name" class="form-control" placeholder="" aria-label=""
+                                aria-describedby="basic-addon1">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary orange text-light" type="button">Add Burger!</button>
+                                <button id="burger-submit" class="btn btn-outline-secondary orange text-light"
+                                    type="button">Add Burger!</button>
                             </div>
                         </div>
                     </form>
@@ -43,6 +51,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="js/logic.js"></script>
 </body>
 
 </html>
